# ckb-otx-demos

./: .gitmodules  README.md  b  build-all.sh  config.toml.template
dex-contracts/: Cargo.toml  README.md
dex-contracts/contracts/amm/: Cargo.toml  README.md
dex-contracts/contracts/amm/src/: main.rs  schema.rs
dex-contracts/contracts/dex1/: Cargo.toml  README.md
dex-contracts/contracts/dex1/src/: main.rs
dex-contracts/scripts/: find_clang
offchain-modules/: Cargo.toml
offchain-modules/crates/dex1-assembler/: Cargo.toml
offchain-modules/crates/dex1-assembler/src/: config.rs  lib.rs
offchain-modules/crates/dex1-assembler/src/schemas/: dex1.rs  mod.rs
offchain-modules/crates/dex1-helper/: Cargo.toml
offchain-modules/crates/dex1-helper/src/: main.rs  utils.rs
offchain-modules/crates/dex1-processor/: Cargo.toml
offchain-modules/crates/dex1-processor/src/: main.rs  tests.rs
offchain-modules/crates/otx-traits/: Cargo.toml
offchain-modules/crates/otx-traits/src/: lib.rs
schemas/: dex.mol  dex1.mol
