[package]
name = "amm"
version = "0.1.0"
edition = "2021"

[dependencies]
blake2b-ref = "0.3.1"
ckb-std = "0.15.1"
ckb-gen-types = { version = "0.112.1", default-features = false }
ckb-gen-types-cobuild = { package = "ckb-gen-types", version = "0.111.0", default-features = false }
ckb-transaction-cobuild = { path = "../../../ckb-transaction-cobuild-poc/ckb-transaction-cobuild" }
ethnum = "1.5.0"
molecule = { version = "0.7.5", default-features = false }
