[package]
name = "dex1-helper"
description = "A helper binary used to aid dex1-processor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["cargo"] }
ckb-sdk = "3.2.0"
ckb-hash = "0.116.1"
ckb-jsonrpc-types = "0.116.1"
ckb-types = "0.116.1"
flexi_logger = "0.28.1"
log = "0.4.21"
secp256k1 = { version = "0.24", features = ["recovery"] }
